@@ -33,6 +33,7 @@ soundgen:::getFormantDispersion(c(500, 1400, 2900, 3500),
 soundgen:::getFormantDispersion(c(500, 1400, 2900, 3500),
   method = 'regression')
 soundgen:::getFormantDispersion(c(500, 1400, NA, 3500))
+soundgen:::getFormantDispersion(c(NA, NA, NA))
 \dontrun{
 nIter = 100  # nIter = 10000 for better results
 speedSound = 35400
